Add demo scripts for RUL prediction and fault classification, local-only baseline experiment, and a run script
- Implemented demo_client.py to showcase RUL prediction and fault classification tasks using SimulatedClientTrainer.
- Created demo_local_only.py for a local-only training baseline experiment with synthetic data generation and performance evaluation.
- Added demo_run.sh to facilitate running the server main module.

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ data/**
 !data/.gitkeep
 
 # Experiments & logs
-experiments/**
+
 logs/
 runs/
-
+experiments/outputs/
 # Model checkpoints
 *.pt
 *.pth
@@ -51,6 +51,6 @@ projectplan.md
 requirements.md
 
 #Remove later
-scripts/
+
 docs/
 notebooks/
