Add Non-IID Hard Data Generator and Evaluation Results
- Introduced a new module `non_iid_generator.py` for generating strongly heterogeneous and non-IID data for federated learning stress testing.
- Implemented four dimensions of heterogeneity: label skew, feature skew, quantity skew, and concept drift.
- Added evaluation results for non-IID hard experiments in `results.json` files for both local-only and global evaluations.
- Configured client-specific parameters for noise, bias, and data sizes to simulate realistic scenarios in federated learning.

--- a/configs/federated_matrix.yaml
+++ b/configs/federated_matrix.yaml
@@ -35,6 +35,12 @@ base_config:
   # Experiment metadata
   experiment_name: "federated_rul_prediction"
   
+  # Data profile: "clean" for existing behavior, "non_iid_hard" for stress testing
+  # NOTE: Changing data_profile ONLY affects data generation.
+  # It does NOT alter: training loops, model architecture, aggregation,
+  # metrics, logging, or random seed handling.
+  data_profile: "clean"
+  
   # Data settings
   data_dir: "data/raw"
   window_size: 50
