--- a/experiments/outputs/centralized/config.json
+++ b/experiments/outputs/centralized/config.json
@@ -1,4 +1,5 @@
 {
+  "data_profile": "clean",
   "data_dir": "data/raw",
   "data_files": [],
   "window_size": 50,
@@ -13,8 +14,8 @@
   "kernel_size": 3,
   "dropout": 0.2,
   "fc_hidden": 32,
-  "epochs": 5,
-  "batch_size": 16,
+  "epochs": 50,
+  "batch_size": 32,
   "lr": 0.001,
   "weight_decay": 0.0001,
   "optimizer": "adam",
@@ -29,5 +30,5 @@
   "checkpoint_every": 5,
   "log_every": 1,
   "save_best": true,
-  "device": "cpu"
+  "device": "auto"
 }
